<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExpenseFragment"
    android:id="@+id/expense_container"
    >
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/charge_cost_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_text"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/charge_name_expense"
        android:text="@string/name_text"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charge_cost_expense"


        >

    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/charge_date_expense"
        android:text="@string/month_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charge_name_expense"
        >

    </TextView>
    <TextView
        android:id="@+id/charge_comment_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charge_date_expense"

        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="Comment"
        android:textSize="20sp"
        android:background="@drawable/comment_rect"
        >

    </TextView>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_button_text"
        app:layout_constraintStart_toEndOf="@id/back_button"
        app:layout_constraintEnd_toStartOf="@id/edit_button"
        app:layout_constraintTop_toBottomOf="@id/charge_comment_expense"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/red"
        />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button_text"
        app:layout_constraintStart_toEndOf="@id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charge_comment_expense"
        app:layout_constraintBottom_toBottomOf="parent"


        />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/charge_comment_expense"/>


</androidx.constraintlayout.widget.ConstraintLayout>
