<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/charge_cost_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_text"
        android:layout_margin="15dp"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        >

    </TextView>

    <TextView
        android:id="@+id/charge_name_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_text"
        android:textSize="30sp"
        android:maxWidth="300dp"
        app:layout_constraintTop_toBottomOf="@id/charge_cost_list"
        app:layout_constraintStart_toStartOf="@id/charge_cost_list"
        >

    </TextView>
    <TextView
        android:id="@+id/charge_date_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month_text"
        android:textSize="15sp"
        android:layout_margin="7.5dp"
        app:layout_constraintTop_toBottomOf="@id/charge_cost_list"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </TextView>




</androidx.constraintlayout.widget.ConstraintLayout>